--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <title>Cylinder tracker</title>
   <script src="./js/jsQR.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
 </head>
 
 <body>
-  <main class="container">
-    <h1>Cylinder Scan demo</h1>
+  <main class="container m-2">
+    <h1>Cylinder Track</h1>
 
     <!-- <form> -->
     <fieldset>
@@ -23,40 +23,49 @@
           <option value="2">Sagarmatha Oxygen</option>
         </select>
       </div>
-      <div class="form-group">
-        <label for="cylinder_sn" for="cylinders">Cylinder No(s):</label>
-        <ul id="cylinders"></ul>
-      </div>
       <div class="form-group columns">
-        <div class="column col-2"><a class="btn btn-primary" onclick="scan()">Scan</a> </div>
-        <div class="column col-2"><a class="btn" onclick="cancelscan()">Cancel</a></div>
+        <div class="column col-1 col-sm-2"><a class="btn btn-primary" onclick="scan()">Scan</a> </div>
+        <div class="column col-2 col-sm-6"><div class="toast toast-success d-invisible" id="toast">Scan success</div></div>
       </div>
-      <div class="toast toast-success d-invisible" id="toast">Scan success</div>
 
       <div class="form-group">
-        <a class="btn" type="submit" value="submit">Submit</a>
+        <label for="cylinder_sn" for="cylinders">Cylinder No(s):</label>
+        <div id="cylinders"></div>
       </div>
-      <div id="loadingMessage" hidden>🎥 Unable to access video stream (please make sure you have a webcam enabled)
+      <div class="form-group">
+        <a class="btn" onclick="geolocation()" value="submit">Submit</a>
       </div>
-      <canvas id="canvas" hidden></canvas>
+      <div id="canvasContainer" class="p-absolute" style="left:0; top:0" hidden>
+
+        <div><a class="btn p-absolute" onclick="stopscan()">Cancel</a></div>
+        <div id="loadingMessage" hidden>🎥 Unable to access video stream (please make sure you have a webcam enabled)
+        </div>
+        <canvas id="canvas"></canvas>
+      </div>
     </fieldset>
     <!-- </form> -->
   </main>
   <script>
-    var video = document.createElement("video");
-    var canvasElement = document.getElementById("canvas");
-    var canvas = canvasElement.getContext("2d");
-    var loadingMessage = document.getElementById("loadingMessage");
-    var cylinderList = document.getElementById("cylinders");
-    var toast = document.getElementById("toast");
-    var cancelframe;
+    const video = document.createElement("video");
+    const canvasContainer = document.getElementById("canvasContainer");
+    const canvasElement = document.getElementById("canvas");
+    const canvas = canvasElement.getContext("2d");
+    const loadingMessage = document.getElementById("loadingMessage");
+    const cylinderList = document.getElementById("cylinders");
+    const toast = document.getElementById("toast");
+    let cancelframe;
 
 
-    function cancelscan() {
+    function stopscan() {
+      navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } }).then(function (stream) {
+
+        stream.getTracks().forEach(function (track) {
+          track.stop();
+        });
+      });
+      // video.hidden = true;
+      canvasContainer.hidden = true;
       cancelAnimationFrame(cancelframe);
-      video.stop();
-      video.hidden = true;
-      canvasElement.hidden = true;
     }
 
     function scan() {
@@ -73,45 +82,51 @@
     function tick() {
       loadingMessage.hidden = false
       loadingMessage.innerText = "⌛ Loading video..."
-      var decoded = null;
+      let decoded = false;
       if (video.readyState === video.HAVE_ENOUGH_DATA) {
         loadingMessage.hidden = true;
-        canvasElement.hidden = false;
+        canvasContainer.hidden = false;
 
         canvasElement.height = video.videoHeight;
         canvasElement.width = video.videoWidth;
         canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
-        var imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
-        var code = jsQR(imageData.data, imageData.width, imageData.height, {
+        const imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
+        const code = jsQR(imageData.data, imageData.width, imageData.height, {
           inversionAttempts: "dontInvert",
         });
-        if (code) {
-          // drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
-          // drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
-          // drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
-          // drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");
-          // outputMessage.hidden = true;
-          // outputData.parentElement.hidden = false;
-          // outputData.value = code.data;
-          var cyl = document.createElement('li');
+        if (code && code.data) {
+          const cyl = document.createElement('span');
+          cyl.classList.add('chip');
+          cyl.dataset.code = code.data;
+          var geo = geolocation();
+          cyl.dataset.date = geo.time || Date.now();
+          cyl.dataset.lat = geo.lat || -1;
+          cyl.dataset.long = geo.long || -1;
           cyl.innerHTML = code.data;
           cylinderList.appendChild(cyl);
-          decoded = code.data;
+          decoded = true;
           toast.classList.remove('d-invisible');
-        } else {
-          // outputMessage.hidden = false;
-          // outputData.parentElement.hidden = true;
         }
       }
       if (decoded) {
-        video.stop();
-        video.hidden = true;
-        canvasElement.hidden = true;
-
-        return decoded;
-
+        stopscan();
       } else {
         cancelframe = requestAnimationFrame(tick);
+      }
+    }
+
+    function geolocation() {
+      if (!navigator.geolocation) {
+        console.error('Geolocation is not supported by your browser');
+      } else {
+        var geo = {};
+        navigator.geolocation.getCurrentPosition((p) => { geo = {
+          'lat': p.coords.latitude,
+          'long': p.coords.longitude,
+          'time': p.timestamp
+        }; console.log(geo)},
+          () => console.error('Unable to retrieve your location'));
+        return geo;
       }
     }
   </script>
